force-app/main/default/objects/Case_Progress_Detail__c/Case_Progress_Detail__c.object-meta.xml
<CustomObject>
    <label>Case Progress Detail</label>
    <nameField>
        <displayFormat>CPD-{0000}</displayFormat>
        <label>Case Progress Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Progress Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>