force-app/main/default/objects/Case_Progress_Detail__c/fields/AWB_Number__c.field-meta.xml
<CustomField>
    <fullName>AWB_Number__c</fullName>
    <label>AWB Number</label>
    <type>TextArea</type>
</CustomField>