force-app/main/default/objects/Case_Progress_Detail__c/fields/CS_Remarks__c.field-meta.xml
<CustomField>
    <fullName>CS_Remarks__c</fullName>
    <label>CS Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>