force-app/main/default/objects/Case_Progress_Detail__c/fields/Current_Action__c.field-meta.xml
<CustomField>
    <fullName>Current_Action__c</fullName>
    <label>Current Action</label>
    <type>TextArea</type>
</CustomField>