force-app/main/default/objects/Case_Progress_Detail__c/fields/FOC_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>FOC_Order_Id__c</fullName>
    <label>FOC Order Id</label>
    <type>TextArea</type>
</CustomField>