force-app/main/default/objects/Case_Progress_Detail__c/fields/Responded_By__c.field-meta.xml
<CustomField>
    <fullName>Responded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Progress_Details</relationshipName>
    <type>Lookup</type>
</CustomField>