force-app/main/default/objects/Case_Progress_Detail__c/fields/Skip_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Skip_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Trigger</label>
    <type>Checkbox</type>
</CustomField>