force-app/main/default/objects/Case_Progress_Detail__c/fields/Tech_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Tech_Issue_Type__c</fullName>
    <label>Tech Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crash Issues</fullName>
            </value>
            <value>
                <fullName>Performance Issues</fullName>
            </value>
            <value>
                <fullName>UI/UX Issues</fullName>
            </value>
            <value>
                <fullName>Functionality Issues</fullName>
            </value>
            <value>
                <fullName>Network Issues</fullName>
            </value>
            <value>
                <fullName>Compatibility Issues</fullName>
            </value>
            <value>
                <fullName>Security Issues</fullName>
            </value>
            <value>
                <fullName>Update Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>