force-app/main/default/objects/Case_Progress_Detail__c/fields/WH_Team_Remarks__c.field-meta.xml
<CustomField>
    <fullName>WH_Team_Remarks__c</fullName>
    <label>Refund/WH Team Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>